--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     </header>
     
     <main>
-        <!-- Texto explicativo do Sistema de Ajuste do Poder de Compra -->
         <section>
             <h3>Como Funciona o Sistema de Ajuste do Poder de Compra?</h3>
             <p>O <strong>Sistema de Ajuste do Poder de Compra (PC)</strong> serve para mostrar como o valor do seu dinheiro muda com as flutuações da moeda, como a valorização ou desvalorização do real. Imagine que você tem R$1000 e, dependendo de como a economia muda, esse valor pode "aumentar" ou "diminuir" em termos de quanto você pode comprar.</p>
@@ -41,7 +40,7 @@
                 <li><strong>Se a moeda não muda (fica estável):</strong>
                     <p>O seu poder de compra continua o mesmo, sem alterações. Exemplo: Se a moeda não muda, seus R$1000 continuam valendo <strong>R$1000</strong>.</p>
                     <ul>
-                        <li><code>PC~ = 1000NV</code></li>
+                        <li><code>~PC = 1000NV</code></li>
                         <li><code>MPC = 1000 reais</code></li>
                     </ul>
                 </li>
@@ -74,7 +73,7 @@
                 </li>
                 <li><strong>Sem alteração (Neutro):</strong>
                     <ul>
-                        <li><code>PC~ = 1000NV</code></li>
+                        <li><code>~PC = 1000NV</code></li>
                         <li><code>MPC = 1000 reais</code></li>
                     </ul>
                 </li>
@@ -93,14 +92,12 @@
         <p>&copy; 2024 Sistema de Ajuste do Poder de Compra. Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Link para a calculadora interativa -->
     <section id="button-section">
         <h3>Explore Mais</h3>
         <p>Descubra como calcular o impacto das variações no poder de compra diretamente em nosso simulador interativo!</p>
-        <a href="calculadora.html" class="btn" target="_blank">Ir para o Simulador</a>
+        <a href="calculadoraPC.html" class="btn" target="_blank">Ir para o Simulador</a>
     </section>
 
-    <!-- Link para o arquivo de script (JavaScript) -->
-    <script src="script.js"></script>
+    
 </body>
 </html>
